trying to reword the intro of the vignette to be clearer and more readable

--- a/vignettes/QuickStart.Rmd
+++ b/vignettes/QuickStart.Rmd
@@ -19,6 +19,19 @@ library(DT)
 
 The gwasCatSearch package provides functionality to search for different phenotypes within the GWAS catalog (<https://www.ebi.ac.uk/gwas/>) database. We used the mappings provided by the GWAS catalog for phenotypes to the EFO ontology (<https://www.ebi.ac.uk/efo/>). We then created a SQLite database that contains (among other things) a table that has the linearized form of the ontology. Annotations can be mapped directly to a term, or they can be inferred from any child term. Then given any EFO ontology label users can query the database to determine which, if any, GWAS catalog phenotypes have been mapped to that EFO term.
 
+The catalog is quite big and as of 7/29/2023 there were 84589 studies reported.  Each of those studies is associated with a published paper and there can be multiple studies associated with each paper.  In addition to the information about the publication the studies have been assigned one or more 'study trait/disease' and each of these is mapped to one or more terms in the EFO (or related) ontologies.  A major challenge for users is to find the set of relevant studies for some disease or set of diseases of interest.  To date we are unaware of any tools that try to provide corpus level searching of the disease traits or EFO trait identifiers that use tools such as stemming, removal of stop words etc.  In this package we have provided simple interface through the `corpustools` package. 
+Our search strategy is as follows,  for each EFO (and related ontologies) term we assemble the text description of that term, all ontology provided synonyms for that term and the 'study disease/traits' that were mapped directly to that ontology term.  These represent the documents in our corpus and when searching it is the concatanation of those terms that is used to identify matches.  Our function `search_features` performs that search and returns the set of EFO identifiers, plus some additional information about number of matches and what text was matched on.
+
+To find the set of studies that corresponds to those EFO terms, we next apply the function `resources_annotated_with_term`.  Which finds all the resources (studies in the GWAS catalog) that were annotated to a particular term.  Now, the terms come from an ontology and the ontologies are typically consistent with a tree structure.  The most specific terms are the leaves, and one moves up in the tree as terms become more general.
+For example, leukemia is the parent of nodes such as 'acute leukemia' and 'lymphoid leukemia'.  While 'lymphoid leukemia' is the parent of 'T-cell leukemia'.  When a user searches on the term leukemia they probably want to find all the terms not just the ones in leaves.  To manage that we use the structure in the ontology to support searching from a set of given nodes up the tree to find the more general nodes.  The notion is that the relationship between a child-node and a parent is that there is either a 'is-a' relationship or a 'has-a' relationship. This can be made more formal, and in the accompanying paper for this project more details are given.
+
+We will use the terminology that a study is mapped *directly* to an ontology term if the GWAS Catalog curators assigned that EFO term to the study. And a study is *mapped by inheritance* or *inherited* at a EFO (ontology) term if it was assigned *directly* to some child (descendant) of that EFO term.
+
+The set of study identifiers that come back from that search can then be used to query the annotated GWAS catalog.  Studies can be retrieved by direct match between tag and GWAS phenotype, or study retrieval can be based
+on broader semantic matching using term relationships in the EFO.  Each study in the GWAS catalog identifies one or more (FIXME:VINCE  not sure what the one in user selects one, refers to one what?) replicated SNP associations.  The user selects one, and then all catalog-replicated GWAS hits within a 1000kb window of this index
+SNP are extracted for visualization.
+
+
 While helpful, we then have the challenge of how to help a researcher find an EFO label that corresponds to a topic they are interested in. To help solve that challenge we took all the EFO term labels and created a searchable corpus using the corpustools R package (<https://cran.r-project.org/web/packages/corpustools/index.html>) so that users can start with ordinary words and then find EFO terms that might be of interest. The output of this search can be accessed programmatically or we provide a conversion to a datatable that can be viewed, sorted and searched.
 
 ## Searching the corpus
