--- a/vignettes/GWAScatPaper.Rmd
+++ b/vignettes/GWAScatPaper.Rmd
@@ -50,7 +50,8 @@ DT::datatable(head(allmatch,n=20))
 Now we can use the `variants_from_study` function to obtain information about the GWAS hits such as the `rsID`, risk allele and effect size.
 
 ```{r lookupSNP}
-lu1 = variants_from_study(allmatch$STUDY.ACCESSION[1],gwcat=gwascat_2023_06_24)
+data(gwc_gr)
+lu1 = variants_from_study(allmatch$STUDY.ACCESSION[1],gwdat=gwc_gr)
 lu1$MAPPED_GENE
 
 ```
@@ -58,8 +59,8 @@ lu1$MAPPED_GENE
 And then we can visualize the variant context using `view_variant_context`.
 
 ```{r plotContext, echo=FALSE}
-view_variant_context(chr=lu1$CHR_ID[1], pos=lu1$CHR_POS[1], radius=5e+05,
-                     gwcat=gwascat_2023_06_24, main="Manhattan Plot")
+view_variant_context(chr=lu1$seqnames[1], pos=lu1$start[1], radius=5e+05,
+                     gwdat=gwc_gr, main="Manhattan Plot")
 ```
 
 ## Perhaps there are other terms that are interesting
